@@ -45,6 +45,7 @@ v 8.13.0 (unreleased)
   - Changed Slack service user referencing from full name to username (Sebastian Poxhofer) 
 
 v 8.12.4 (unreleased)
+  - Fix type mismatch bug when closing Jira issue
 
 v 8.12.3
   - Update Gitlab Shell to support low IO priority for storage moves
